[package]
name = "contentfree"
version = "0.1.0"
authors = ["Jin Watanabe <jin.watanabe.6g@gmail.com>"]
edition = "2021"
description = "contentful client for rust"
repository = "https://github.com/jinwatanabe/contentfree"
license="MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
anyhow = "1.0.57"
tracing = "0.1.34"
tokio = { version = "1.18.2", features = ["full"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"] }